...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07999998" />

    <Button
        android:id="@+id/addPlaylistButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/addplaylist"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/playListTextInput"
        app:layout_constraintTop_toBottomOf="@+id/usernameHome"
        app:layout_constraintVertical_bias="0.92" />

    <TableLayout
        android:id="@+id/playListTable"
        android:layout_width="409dp"
...
