<resources>
    <string name="app_name">Vassar Spotify</string>
    <string name="search_hint">Search</string>
    <string name="search_label">Search for song or artist</string>
    <string name="search_image">Search</string>
    <string name="radio_button1">Song</string>
    <string name="radio_button2">Artist</string>
    <string name="search"></string>
    <string name="title_app">Vassar Spotify</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="logIn">Login</string>
    <string name="create">Create Account</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button">Button</string>
    <string name="play">Play</string>
    <string name="skip">skip</string>
    <string name="replay">Replay</string>
    <string name="songtitle">songTitle</string>
    <string name="artisttitle">artistTitle</string>
    <string name="song_name_PS">songTitle</string>
    <string name="home">Home</string>
    <string name="search2">search</string>
    <string name="play2">play</string>
    <string name="name">NAME</string>
    <string name="addplaylist">addPlaylist</string>
    <string name="playlistname">playListName</string>
    <string name="edit">edit</string>
    <string name="playlistname2">playListname2</string>
    <string name="choose_a_playlist">Choose A Playlist</string>
    <string name="log_out">Log Out</string>
    <string name="empty"></string>
    <string name="songfilename">savedsongs</string>

</resources>