<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/playScreenLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.PlayScreenFragment">

    <Button
        android:id="@+id/playbackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.88" />

    <Button
        android:id="@+id/skipButton"
        android:layout_width="86dp"
        android:layout_height="48dp"
        android:text="@string/empty"
        app:icon="@android:drawable/ic_media_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/playbackButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.88"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/song_name_PS"
        android:layout_width="312dp"
        android:layout_height="39dp"
        android:layout_marginBottom="24dp"
        android:text="@string/songtitle"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/artist_name_PS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/artist_name_PS"
        android:layout_width="311dp"
        android:layout_height="53dp"
        android:layout_marginBottom="24dp"
        android:text="@string/artisttitle"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/playbackButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/overdrake"
        app:layout_constraintBottom_toTopOf="@+id/song_name_PS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="TODO" />

    <Button
        android:id="@+id/replayButton"
        android:layout_width="77dp"
        android:layout_height="48dp"
        android:contentDescription="@string/empty"
        android:text='@string/empty'
        app:flow_horizontalAlign="end"
        app:icon="@android:drawable/ic_media_previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/playbackButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.88"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>